# altiair

./: .env.example  .gitignore  .npmrc.example  README.md  Raspberry_Pi_Setup.md  package-lock.json  package.json  pitch.md  pitch2.md  pitch_final.md  readme-ben.md  requirements.txt  tsconfig.json
agent/: Cargo.toml  README.md
agent/fixtures/: sample-bundle.json
agent/src/: main.rs
demo/: config.py  mesh_wifi.sh  scenario.py
docs/: ben-three-node-demo-runbook.md  cask-implementation.md  cask-ontology-approach.md  cask-osdk-local-llm-brief.md  darpa-opportunity-alignment.md  ddil-edge-mesh-implementation.md  demo-flow-chart.md  distributed-resolution-demo.md  foundry-atlas-status.md  mock-cask-demo-data.md  photo-booth-requirements-2026-05-02.md  product-flow-chart.md  replicated-mission-ledger.md  security-implementation-plan.md  teammate-remote-pi-frontend-handoff.md  training-tag-objective.md
models/: audio.py  broadcaster.py  camera.py  config.py  coordinator.py  demo_node.py  listener.py  llm.py  main.py  node.py  rf.py  rfid_check.py  server.py  world_state.py
scripts/: agent-smoke.sh  customize_raspberry_pi_sd.sh  demo-start.sh  workflow-smoke.sh
scripts/jetson/: README.md  altiair-lan-healthcheck.sh  altiair-usb-access.service  altiair-usb-access.sh  configure-altiair-lan.sh  fleet-local-llm.sh  install-altiair-lan-watchdog.sh  install-node-api-service.sh  operator-mesh-proof.sh  serial-run.expect  ssh-usb.sh  sync-time-usb.sh
scripts/pi/: README.md  install-local-llm.sh  (+20 more)
src/: config.ts
ui/: README.md  app.js  index.html  server.mjs  styles.css
(+46 files in other folders)
