[package]
name = "altiair-agent"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
ed25519-dalek = "2"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }

[dev-dependencies]
tempfile = "3"
